[metadata]
name = grad-cam-1d
version = 0.1
author = Nils Golembiewski
author_email = nilsgolembiewski@gmail.com
description = Many Class Activation Map methods implemented in Pytorch. Including Grad-CAM, Grad-CAM++, Score-CAM, Ablation-CAM and XGrad-CAM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NilsHasNoGithub/pytorch-grad-cam-1d
project_urls =
    Bug Tracker = https://github.com/NilsHasNoGithub/pytorch-grad-cam-1d/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6